# GovChainBoardBack

./: .env  .gitignore  README.md  abi_encode.html  call_functions_GovGCB.py  call_functions_scroll.py  hardhat.config.js  main.py  pyproject.toml
artifacts/: AccessControl_metadata.json  Address.json  Address_metadata.json  Checkpoints.json  Checkpoints_metadata.json  Context_metadata.json  DoubleEndedQueue.json  DoubleEndedQueue_metadata.json  ECDSA.json  ECDSA_metadata.json  EIP712_metadata.json  ERC165_metadata.json  ERC20Burnable_metadata.json  ERC20Pausable_metadata.json  ERC20Permit_metadata.json  ERC20Votes_metadata.json  ERC20_metadata.json  GovChainBoard.json  GovChainBoard_metadata.json  GovGCV.json  GovGCV_metadata.json  GovernorChainBoard.json  GovernorChainBoard_metadata.json  GovernorCountingSimple_metadata.json  GovernorSettings_metadata.json  GovernorTimelockCompound.json  GovernorTimelockCompound_metadata.json  GovernorVotes_metadata.json  Governor_metadata.json  IAccessControl_metadata.json  ICompoundTimelock.json  ICompoundTimelock_metadata.json  IERC1155Errors_metadata.json  IERC1155Receiver_metadata.json  IERC1271_metadata.json  IERC165_metadata.json  IERC20Errors_metadata.json  IERC20Metadata_metadata.json  IERC20Permit_metadata.json  IERC20_metadata.json  (+34 more)
contracts/: GCB_token.sol  GCB_token_SC.sol  GCB_token_flattened.sol  GovGCB.sol  GovGCB2.sol  GovGCB_SC.sol  GovGCB_flattened.sol  Utils.sol  gov_GCB_V2.sol  gov_GCB_V2_flattened.sol  gov_GCV.sol  gov_GCV_flattened.sol  timelock.sol  timelock_flattened.sol  token_GCB.sol  token_GCB_V2.sol  (+2 more)
(+63 files in other folders)
