[tool.poetry]
name = "govchainboardback"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = {extras = ["tester"], version = "^6.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
